--- a/Web基础知识学习/02-CSS学习笔记/08-盒子模型.md
+++ b/Web基础知识学习/02-CSS学习笔记/08-盒子模型.md
@@ -275,3 +275,251 @@ border-radius: 左上角  右上角  右下角  左下角;
 .header{ width:960px; margin:0 auto;}
 ```
 
+### 图片、背景文字和盒子对齐的区别
+
+1. 文字水平居中和盒子水平居中
+
++ 文字水平居中：text-align: center;
++ 盒子水平居中：左右margin为auto
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        div {
+            width: 300px;
+            height: 100px;
+            border: 1px solid pink;
+            /* 文字水平居中 */
+            text-align: center;
+            /* 盒子水平居中 */
+            margin: 0 auto;
+        }
+    </style>
+</head>
+<body>
+    <div>
+        文字水平居中
+    </div>
+</body>
+</html>
+```
+
+2. 插入图片和背景图片
+
++ 插入图片：用的最多，比如：产品展示类
++ 背景图片：一般用于小图标背景或者超大背景图片
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        section {
+            width: 300px;
+            height: 300px;
+            border: 1px solid #000;
+            /* 背景图片 */
+            background-image: url(./ms.jpg);
+            /* 背景图片大小 */
+            background-size: 80px;
+            /* 不重复 */
+            background-repeat: no-repeat;
+            /* 改变位置 */
+            background-position: 150px 150px;
+        }
+        
+        section img {
+            /* 插入图片更改大小 */
+            width: 80px;
+
+            /* 更改位置 */
+            margin-top: 30px;
+        }
+    </style>
+</head>
+<body>
+    <section>
+        <!-- 插入图片 -->
+        <img src="./01.jpg" alt="">
+    </section>
+</body>
+</html>
+```
+
+### 外边距合并
+&emsp;&emsp;使用margin定义块元素的垂直外边距时，可能会出现外边距的合并。
+
+1. 相邻块元素垂直外边距的合并
+
+&emsp;&emsp;当上下相邻的两个块元素相遇时，如果上面的元素有下外边距margin-bottom，下面的元素有上外边距margin-top，则它们之间的垂直间距不是margin-bottom与margin-top之和，而是两者中的较大者。这种现象被称为相邻块元素垂直外边距的合并（也称外边距塌陷）。
+
+![相邻块元素垂直外边距的合并](./images/www.png)
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+       div {
+           width: 200px;
+           height: 200px;
+           background-color: pink;
+       }
+       div:first-child {
+           margin-bottom: 100px;
+       }
+       div:last-child {
+           background-color: purple;
+           margin-top: 50px;
+       }
+    </style>
+</head>
+<body>
+    <!-- 中间的距离是100px -->
+    <div></div>
+    <div></div>
+</body>
+</html>
+```
+
+&emsp;&emsp;解决方法：避免出现这种情况，将需要距离给一个就可以了，比如上面的案例，如果想距离是150px，直接给上面的div设置下边距为150px，或者直接给下面的div设置上边距为150px即可。
+
+2. 嵌套块元素垂直外边距的合并
+
+&emsp;&emsp;对于两个嵌套关系的块元素，如果父元素没有上内边距及边框，则父元素的上外边距会与子元素的上外边距发生合并，合并后的外边距为两者中的较大者，即使父元素的上外边距为0，也会发生合并。
+
+![嵌套块元素垂直外边距的合并](./images/n.png)
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+       .father {
+           width: 300px;
+           height: 300px;
+           background-color: pink;
+           /* 如果不设置，则是上边距为30px
+           如果设置小于30px，则使用30px
+           如果大于30px，则使用当前设定的值 */
+           margin-top: 100px;
+       }
+       .child {
+           width: 200px;
+            height: 200px;
+            background-color: purple;
+            /* 外边距塌陷，小盒子没有30像素的距离 */
+            margin-top: 30PX;
+       }
+    </style>
+</head>
+<body>
+    <div class="father">
+        <div class="child"></div>
+    </div>
+</body>
+</html>
+```
+
+![外边距塌陷](./images/外边距塌陷.bmp)
+
+&emsp;&emsp;解决方案：
+
+1. 可以为父元素定义1像素的上边框或上内边距。
+2. 可以为父元素添加overflow:hidden。
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+       .father {
+           width: 300px;
+           height: 300px;
+           background-color: pink;
+           margin-top: 100px;
+           /* 方法1  设置边框 */
+           /* border: 1px solid #000; */
+
+           /* 方法2 设置内边距 */
+           /* padding-top: 1px; */
+
+           /* 方法3 设置overflow */
+           overflow: hidden;
+       }
+       .child {
+           width: 200px;
+            height: 200px;
+            background-color: purple;
+            margin-top: 30PX;
+       }
+    </style>
+</head>
+<body>
+    <div class="father">
+        <div class="child"></div>
+    </div>
+</body>
+</html>
+```
+
+## 清除元素的默认内外边距
+&emsp;&emsp;为了更方便地控制网页中的元素（有的浏览器会有默认的边框），制作网页时可使用如下代码清除元素的默认内外边距： 
+
+```css
+* {
+   padding:0;         /* 清除内边距 */
+   margin:0;          /* 清除外边距 */
+}
+```
+
+> *__注意：__* 行内元素是只有左右外边距的，没有上下外边距的。内边距在ie6等低版本浏览器也会有问题，所以尽量不要给行内元素指定上下的内外边距就好了。
+
+## 盒子模型的宽度和高度
+&emsp;&emsp;使用宽度属性width和高度属性height可以对盒子的大小进行控制。width和height的属性值可以为不同单位的数值或相对于父元素的百分比%，实际工作中最常用的是像素值。大多数浏览器，如Firefox、IE6及以上版本都采用了W3C规范，符合CSS规范的盒子模型的总宽度和总高度的计算原则是：
+
++ 外盒尺寸计算（元素空间尺寸）
+  + Element空间高度 = content height + padding + border + margin
+  + Element 空间宽度 = content width + padding + border + margin
+
++ 内盒尺寸计算（元素实际大小）
+  + Element Height = content height + padding + border （Height为内容高度）
+  + Element Width = content width + padding + border （Width为内容宽度）
+
+
+> *__注意：__*
+> 1. 宽度属性width和高度属性height仅适用于块级元素，对行内元素无效（ img 标签和 input除外）。
+> 2. 计算盒子模型的总高度时，还应考虑上下两个盒子垂直外边距合并的情况。
+> 3. *__如果一个盒子没有给定宽度/高度或者继承父亲的宽度/高度，则padding不会影响本盒子大小__*。
+
+## 盒子模型布局的稳定性
+&emsp;&emsp;学习盒子模型最大的困惑就是分不清内外边距的使用，什么情况下使用内边距，什么情况下使用外边距。
+
+&emsp;&emsp;大部分情况下是可以混用的，就是说你用内边距也可以，用外边距也可以，觉得哪个方便就用哪个。根据稳定性来分，建议如下优先使用：  
+
+1. 宽度（width）
+2. 内边距（padding）
+3. 外边距（margin）   
+
+&emsp;&emsp;原因：
+
++ margin：会有外边距合并，并且ie6下面margin问题更多，所以最后使用。
++ padding：会影响盒子大小，需要进行加减计算，所以其次使用
++ width：没有问题，经常使用宽度剩余法、高度剩余法来做
+
