--- a/Web基础知识学习/02-CSS学习笔记/08-盒子模型.md
+++ b/Web基础知识学习/02-CSS学习笔记/08-盒子模型.md
@@ -523,3 +523,72 @@ border-radius: 左上角  右上角  右下角  左下角;
 + padding：会影响盒子大小，需要进行加减计算，所以其次使用
 + width：没有问题，经常使用宽度剩余法、高度剩余法来做
 
+# CSS3盒模型
+&emsp;&emsp;CSS3中可以通过box-sizing来指定盒模型，即可指定为content-box、border-box，这样我们计算盒子大小的方式就发生了改变。可以分成两种情况：
+
+1. content-box：盒子大小为 *__width + padding + border__* ，此值为其默认值，其让元素维持W3C的标准Box Mode。
+
+2. border-box：盒子大小为 *__width__* ，就是说padding和border是包含到width里面的。
+
+> 注：上面的标注的width指的是CSS属性里设置的width: length，content的值是会自动调整的
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        div:first-child {
+            width: 200px;
+            height: 200px;
+            background-color: pink;
+            /*就是以前的盒子模型 padding 和 border 会撑开盒子*/
+            /* box-sizing: content-box;  */
+            /* 不会撑开盒子 */
+            box-sizing: border-box;
+            padding: 100px;
+            border: 10px solid red;
+        }
+    </style>
+</head>
+<body>
+    <div></div>
+</body>
+</html>
+```
+
+# 盒子阴影
+&emsp;&emsp;语法格式：
+
+```css
+box-shadow:水平阴影 垂直阴影 模糊距离 阴影尺寸 阴影颜色  内/外阴影；
+```
+
+![盒子阴影](./images/盒子阴影.png)
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        div {
+            width: 200px;
+            height: 200px;
+            border: 10px solid red;
+            /* box-shadow:水平位置 垂直位置 模糊距离 阴影尺寸（影子大小） 阴影颜色  内/外阴影； */
+            box-shadow: 5px 5px 3px 4px rgba(0,0,0,.4);
+        }
+    </style>
+</head>
+<body>
+    <div></div>
+</body>
+</html>
+```
+
+> 外阴影不能写outset，如果需要外阴影，直接省略不赋值就可以了。
