--- a/Web基础知识学习/02-CSS学习笔记/09-浮动.md
+++ b/Web基础知识学习/02-CSS学习笔记/09-浮动.md
@@ -113,9 +113,40 @@ none  | 元素不浮动（默认值）
 + 浮动会脱离标准流，不占位置，会影响标准流
 + 浮动只有左右浮动
 
-&emsp;&emsp;浮动首先创建包含块的概念（包裹），就是说浮动的元素总是找到它最近的父级元素对齐，但是不会超出内边距的范围。
-
 > *__注意：__* 浮动首先需要添加标准流父级别
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .father {
+            /* 父级别是标准流 */
+            width: 500px;
+            height: 500px;
+            background-color : pink;
+        }
+        .son {
+            /* 子元素浮动 */
+            width: 200px;
+            height: 200px;
+            background-color: yellow;
+            float: right;
+        }
+    </style>
+</head>
+<body>
+    <div class="father">
+        <div class="son"></div>
+    </div>
+</body>
+</html>
+```
+
+&emsp;&emsp;浮动首先创建包含块的概念（包裹），就是说浮动的元素总是找到它最近的父级元素对齐，但是不会超出内边距的范围。
 
 ![one](./images/one.jpg)
 
@@ -124,4 +155,65 @@ none  | 元素不浮动（默认值）
 + 如果上一个元素有浮动，则A元素顶部会和上一个元素的顶部对齐
 + 如果上一个元素是标准流，则A元素的顶部会和上一个元素的底部对齐
 
-![two](./images/two.jpg)
+![two](./images/two.png)
+
+&emsp;&emsp;由此可以推断出，一个父盒子里面的子盒子，如果其中一个子级有浮动的，则其他子级都需要浮动，这样才能一行对齐显示。
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        section {
+            width: 300px;
+            height: 300px;
+            background-color: hotpink;
+        }
+        .one > div:first-child ,
+        .two > div:first-child {
+            width: 50px;
+            height: 50px;
+            background-color: pink;
+        }
+        .one > div:last-child,
+        .two > div:last-child {
+            width: 100px;
+            height: 100px;
+            background-color: yellow;
+            float: left;
+        }
+        .two > div:first-child {
+            float: left;
+        }
+    </style>
+</head>
+<body>
+    <!-- 上一个盒子不浮动，下一个浮动 -->
+    <section class="one">
+        <div>上一个盒子</div>
+        <div>下一个盒子</div>
+    </section>
+    <!-- 上一个浮动，下一个也浮动 -->
+    <section class="two">
+        <div>上一个盒子</div>
+        <div>下一个盒子</div>
+    </section>
+</body>
+</html>
+```
+
+&emsp;&emsp;元素添加浮动后，元素会具有行内块元素的特性。元素的大小完全取决于定义的大小或者默认的内容多少浮动根据元素书写的位置来显示相应的浮动。
+
+## 浮动总结
+&emsp;&emsp;浮动的目的就是为了让多个块级元素在同一行上显示：
+
++ 加了浮动的盒子是浮起来的，漂浮在其他的标准流盒子上面
++ 加了浮动的盒子是不占位置的，它原来的位置漏给了标准流的盒子
++ 特别注意：
+  + 浮动的盒子需要和标准流的父级搭配使用
+  + 浮动可以使元素显示模式体现为行内块特性
+
+
