--- a/Web基础知识学习/02-CSS学习笔记/09-浮动.md
+++ b/Web基础知识学习/02-CSS学习笔记/09-浮动.md
@@ -216,4 +216,165 @@ none  | 元素不浮动（默认值）
   + 浮动的盒子需要和标准流的父级搭配使用
   + 浮动可以使元素显示模式体现为行内块特性
 
+# 清除浮动
+&emsp;&emsp;浮动本质是用来做一些文字混排效果的，但被拿来做布局用则会有很多的问题出现。由于浮动元素不再占用原文档流的位置，所以它会对后面的元素排版产生影响，为了解决这些问题，此时就需要在该元素中清除浮动。准确地说并不是清除浮动，而是 *__清除浮动后造成的影响__* 。
+
+## 清除浮动的本质
+&emsp;&emsp;清除浮动主要为了解决父级元素因为子级浮动引起内部高度为0的问题。
+
+![](./images/n.jpg)
+
+![](./images/no.jpg)
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .father {
+            border: 1px solid red;
+        }
+        .demo1 {
+            width: 100px;
+            height: 100px;
+            background-color: pink;
+            float: left;
+        }
+        .demo2 {
+            width: 150px;
+            height: 100px;
+            background-color: hotpink;
+            float: left;
+        }
+        .xiaomao {
+            height: 100px;
+            background-color: #000;
+        }
+    </style>
+</head>
+<body>
+    <div class="father">
+        <div class="demo1"></div>
+        <div class="demo2"></div>
+    </div>
+    <div class="xiaomao">
+
+    </div>
+</body>
+</html>
+```
+
+> 通过给父元素指定高度可以解决问题，但是很多情况下并不知道子元素有多高
+
+## 清除浮动的方法
+&emsp;&emsp;清除浮动就是把浮动的盒子圈到里面，让父盒子闭合出口和入口不让他们出来影响其他元素。在CSS中，clear属性用于清除浮动，其基本语法格式如下：
+
+```css
+选择器{clear:属性值;}
+```
+
+属性值 | 描述
+-|-
+left  | 不允许左侧有浮动元素（清除左侧浮动的影响）
+right | 不允许右侧有浮动元素（清除右侧浮动的影响）
+both  | 同时清除左右两侧浮动的影响
+
+### 额外标签法
+&emsp;&emsp;通过在浮动元素末尾添加一个空的标签，例如： *__" &lt;div style="clear:both;"&gt;&lt;/div&gt;"__* ，使用其它标签，如br等亦可。
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .father {
+            border: 1px solid red;
+        }
+        .demo1 {
+            width: 100px;
+            height: 100px;
+            background-color: pink;
+            float: left;
+        }
+        .demo2 {
+            width: 150px;
+            height: 100px;
+            background-color: hotpink;
+            float: left;
+        }
+        .xiaomao {
+            height: 100px;
+            background-color: #000;
+        }
+    </style>
+</head>
+<body>
+    <div class="father">
+        <div class="demo1"></div>
+        <div class="demo2"></div>
+    </div>
+    <div style="clear: both;"></div>
+    <div class="xiaomao">
+
+    </div>
+</body>
+</html>
+```
+
++ 优点：通俗易懂，书写方便
++ 缺点：添加许多无意义的标签，结构化较差
+
+### 父级添加overflow属性方法
+&emsp;&emsp;可以通过触发BFC的方式，可以实现清除浮动效果。可以给父级添加overflow为：hidden、auto、scroll都可以实现。
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .father {
+            border: 1px solid red;
+            overflow: hidden;
+        }
+        .demo1 {
+            width: 100px;
+            height: 100px;
+            background-color: pink;
+            float: left;
+        }
+        .demo2 {
+            width: 150px;
+            height: 100px;
+            background-color: hotpink;
+            float: left;
+        }
+        .xiaomao {
+            height: 100px;
+            background-color: #000;
+        }
+    </style>
+</head>
+<body>
+    <div class="father">
+        <div class="demo1"></div>
+        <div class="demo2"></div>
+    </div>
+    <div class="xiaomao">
+
+    </div>
+</body>
+</html>
+```
+
++ 优点：代码简洁
++ 缺点：内容增多时候容易造成不会自动换行导致内容被隐藏掉，无法显示需要溢出的元素。
 
