--- a/Web基础知识学习/02-CSS学习笔记/09-浮动.md
+++ b/Web基础知识学习/02-CSS学习笔记/09-浮动.md
@@ -378,3 +378,145 @@ both  | 同时清除左右两侧浮动的影响
 + 优点：代码简洁
 + 缺点：内容增多时候容易造成不会自动换行导致内容被隐藏掉，无法显示需要溢出的元素。
 
+### 使用after伪元素清除浮动
+&emsp;&emsp;after方式为空元素的升级版，好处是不用单独加标签了：
+
+```css
+.clearfix:after {  
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;  
+}
+
+ .clearfix {*zoom: 1;}   /* IE6、7 专有 */
+```
+
++ 优点：符合闭合浮动思想  结构语义化正确
++ 缺点：由于IE6-7不支持:after，使用 zoom:1触发hasLayout
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .faher {
+            background-color: pink;
+        }
+        .box1 {
+            width: 100px;
+            height: 100px;
+            background-color: yellow;
+            float: left;
+        }
+        .box2 {
+            width: 150px;
+            height: 200px;
+            background-color: deeppink;
+            float: left;
+        }
+        .box3 {
+            height: 100px;
+            background-color: red;
+        }
+        .clearfix:after {
+            content: ".";
+            display: block;
+            clear: both;
+            visibility: hidden;
+            height: 0px;
+        }
+        .clearfix {
+            *zoom: 1;
+        }
+    </style>
+</head>
+<body>
+    <div class="father clearfix">
+        <div class="box1"></div>
+        <div class="box2"></div>
+    </div>
+    <div class="box3">
+
+    </div>
+</body>
+</html>
+```
+
+> *__注意：__* content:"."; 里面尽量跟一个小点或者其他，尽量不要为空，否则再firefox 7.0前的版本会有生成空格。
+
+### 使用before和after双伪元素清除浮动
+&emsp;&emsp;使用方法：
+
+```css
+.clearfix:before,
+.clearfix:after {
+  content:"";
+  display:table;  /* 这句话可以出发BFC BFC可以清除浮动 */
+}
+.clearfix:after {
+ clear:both;
+}
+.clearfix {
+  *zoom:1;
+}
+```
+
++ 优点: 代码更简洁
++ 缺点: 由于IE6-7不支持:after，使用 zoom:1触发 hasLayout。
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .faher {
+            background-color: pink;
+        }
+        .box1 {
+            width: 100px;
+            height: 100px;
+            background-color: yellow;
+            float: left;
+        }
+        .box2 {
+            width: 150px;
+            height: 200px;
+            background-color: deeppink;
+            float: left;
+        }
+        .box3 {
+            height: 100px;
+            background-color: red;
+        }
+        .clearfix:after,
+        .clearfix:before {
+            content: "";
+            display: table;
+        }
+        .clearfix:after {
+            clear: both;
+        }
+        .clearfix {
+            *zoom: 1;
+        }
+    </style>
+</head>
+<body>
+    <div class="father clearfix">
+        <div class="box1"></div>
+        <div class="box2"></div>
+    </div>
+    <div class="box3">
+
+    </div>
+</body>
+</html>
+```
