--- a/Web基础知识学习/02-CSS学习笔记/11-定位.md
+++ b/Web基础知识学习/02-CSS学习笔记/11-定位.md
@@ -305,6 +305,44 @@ z-index: 2;
 > 3. 后面数字一定不能加单位。
 > 4. 只有相对定位，绝对定位，固定定位有此属性，其余标准流，浮动，静态定位都无此属性，也不可指定此属性。
 
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        div:first-child {
+            width: 200px;
+            height: 200px;
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            background-color: red;
+            z-index: 10;
+        }
+        div:last-child {
+            width: 200px;
+            height: 200px;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: pink;
+        }
+    </style>
+</head>
+<body>
+    <div></div>
+    <div></div>
+</body>
+</html>
+```
+
 ## 四种定位总结
 
 定位模式 | 是否脱标占有位置 | 是否可以使用边偏移 | 移动位置基准
@@ -316,6 +354,43 @@ z-index: 2;
 
 # 定位模式转换
 &emsp;&emsp;跟浮动一样，元素添加了绝对定位和固定定位之后，元素模式也会发生转换，都转换为行内块模式。*__因此如果行内元素添加了绝对定位、固定定位后或者浮动后，可以不用转换模式，直接给高度和宽度就可以了。__*
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        div {
+            width: 200px;
+            height: 200px;
+            position: absolute;
+            top: 10px;
+            left: 0px;
+            background-color: red;
+        }
+        span {
+            width: 200px;
+            height: 200px;
+            position: absolute;
+            top: 10px;
+            right: 0px;
+            background-color: pink;
+        }
+    </style>
+</head>
+<body>
+    <div></div>
+    <span></span>
+</body>
+</html>
+```
 
 
 
