--- a/Web基础知识学习/02-CSS学习笔记/08-盒子模型.md
+++ b/Web基础知识学习/02-CSS学习笔记/08-盒子模型.md
@@ -16,6 +16,8 @@
 
 &emsp;&emsp;所有的文档元素（标签）都会生成一个矩形框，我们称为元素框（element box），它描述了一个文档元素在网页布局汇总所占的位置大小。因此，<strong style="color: #f00;">每个盒子除了有自己大小和位置外，还影响着其他盒子的大小和位置。</strong>
 
+![盒子模型](./images/box.png)
+
 ![盒子模型](./images/boxs.png)
 
 # 盒子边框
@@ -434,7 +436,7 @@ border-radius: 左上角  右上角  右下角  左下角;
 </html>
 ```
 
-![外边距塌陷](./images/外边距塌陷.bmp)
+![外边距塌陷](./images/waibianjutaxian.bmp)
 
 &emsp;&emsp;解决方案：
 
