--- a/Web基础知识学习/02-CSS学习笔记/11-定位.md
+++ b/Web基础知识学习/02-CSS学习笔记/11-定位.md
@@ -281,7 +281,39 @@ fixed    | 固定定位，相对于浏览器窗口进行定位
 + 固定定位完全脱标，不占有位置，不随着滚动条滚动。
 
 ```html
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .header {
+            height: 40px;
+            background-color: red;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+        }
+        .main {
+            margin-top: 40px;
+            background-color: pink;
+            height: 1000px;
+        }
+    </style>
+</head>
+<body>
+   <div class="header"></div>
+   <div class="main">
+    请问qwe请问请问我去啊是大声点阿斯顿
+   </div>
+</body>
+</html>
 ```
 
 > *__注意：__* 
