--- a/Web基础知识学习/02-CSS学习笔记/14-滑动门技术.md
+++ b/Web基础知识学习/02-CSS学习笔记/14-滑动门技术.md
@@ -1,2 +1,153 @@
 @[toc](滑动门技术)
 
+# 滑动门出现的背景
+&emsp;&emsp;为了使各种特殊形状的背景能够自适应元素中文本内容的多少，出现了CSS滑动门技术。它从新的角度构建页面，使各种特殊形状的背景能够自由拉伸滑动，以适应元素内部的文本内容，可用性更强，最常见于各种导航栏的滑动门。
+
+# 核心技术
+&emsp;&emsp;核心技术就是利用CSS精灵（主要是背景位置）和盒子padding撑开宽度, 以便能适应不同字数的导航栏。一般的经典布局都是这样的：
+
+```html
+<li>
+  <a href="#">
+    <span>导航栏内容</span>
+  </a>
+</li>
+```
+
+&emsp;&emsp;总结：
+
+1. a设置背景左侧，padding撑开合适宽度。
+2. span设置背景右侧，padding撑开合适宽度，剩下由文字继续撑开宽度。
+3. 之所以a包含span就是因为整个导航都是可以点击的
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
+        a {
+            display: inline-block;
+            height: 33px;
+            background: url(./images/ao.png) no-repeat;
+            padding-left: 15px;
+            margin: 100px;
+        }
+        a span {
+            height: 33px;
+            display: inline-block;
+            background: url(./images/ao.png) no-repeat right;
+            padding-right: 15px;
+        }
+    </style>
+</head>
+<body>
+   <a href="#">
+       <span>123</span>
+   </a>
+</body>
+</html>
+```
+
+# before和after伪元素
+&emsp;&emsp;之所以被称为伪元素，是因为它们不是真正的页面元素，html没有对应的元素，但是其所有用法和表现行为与真正的页面元素一样，可以对其使用诸如页面元素一样的css样式。表面上看上去貌似是页面的某些元素来展现，实际上是css样式展现的行为，因此被称为伪元素。伪元素在html代码结构中是无法进行审查的。
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
+        div::before {
+            content: "我";
+        }
+        div::after {
+            content: "中国人";
+            font-size: 20px;
+            color: red;
+            display: inline-block;
+            width: 100px;
+            height: 100px;
+            background-color: yellow;
+        }
+    </style>
+</head>
+<body>
+    <div>是</div>
+</body>
+</html>
+```
+
++ 类选择器和伪类选择器都是选取对象
++ 伪元素选择器本质上是插入一个元素、标签或者盒子(行内元素，无法设置宽高)
+
+> *__注意:__*
+> 伪元素 *:before* 和 *:after* 添加的内容默认是行内元素（inline），这个两个伪元素的*content* 属性表示伪元素的内容，设置 *:before* 和 *:after* 时必须设置其 *content* 属性，否则伪元素就不起作用。
+
+# 过渡
+&emsp;&emsp;过渡（transition）是CSS3中具有颠覆性的特征之一，可以在不使用Flash动画或 JavaScript的情况下，当元素从一种样式变换为另一种样式时为元素添加效果。
+
+> *__帧动画：__* 通过一帧一帧的画面按照固定顺序和速度播放，如电影胶片。
+
+&emsp;&emsp;在CSS3里使用transition可以实现补间动画（过渡效果），并且当前元素只要有“属性”发生变化时就可以实现平滑的过渡。语法格式如下：
+
+```css
+transition: 要过渡的属性  花费时间  运动曲线  何时开始;
+/*如果有多组属性变化，还是用逗号隔开。*/
+```
+
+属性 | 描述 | CSS
+-|-|-
+transition | 简写属性，用于在一个属性中设置四个过渡属性 | 3
+transition-property | 规定应用过渡的 CSS 属性的名称 | 3
+transition-duration | 定义过渡效果花费的时间,默认是0| 3
+transition-timing-function | 规定过渡效果的时间曲线，默认是 "ease" | 3
+transition-delay | 规定过渡效果何时开始，默认是0，立马开始 | 3
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
+        div {
+            width: 200px;
+            height: 100px;
+            background-color: pink;
+            margin: 120px auto;
+        }
+        div:hover {
+            width: 400px;
+            transition: width 0.6s ease 0s;
+        }
+    </style>
+</head>
+<body>
+    <div></div>
+</body>
+</html>
+```
+
++ transition-property：如果想要所有的属性都变化过渡，写一个all就可以
++ transition-duration：花费时间，单位是秒，比如：0.5s。这个s单位必须写
++ 运动曲线示意图：
+
+![1498445454760](./images/1498445454760.png)
