--- a/Web基础知识学习/02-CSS学习笔记/14-滑动门技术.md
+++ b/Web基础知识学习/02-CSS学习笔记/14-滑动门技术.md
@@ -136,7 +136,7 @@ transition-delay | 规定过渡效果何时开始，默认是0，立马开始 | 
         }
         div:hover {
             width: 400px;
-            transition: width 0.6s ease 0s;
+            transition: width 0.6s ease-in 0s;
         }
     </style>
 </head>
