--- a/Web基础知识学习/02-CSS学习笔记/14-滑动门技术.md
+++ b/Web基础知识学习/02-CSS学习笔记/14-滑动门技术.md
@@ -133,10 +133,11 @@ transition-delay | 规定过渡效果何时开始，默认是0，立马开始 | 
             height: 100px;
             background-color: pink;
             margin: 120px auto;
+            transition: width 0.6s
         }
         div:hover {
             width: 400px;
-            transition: width 0.6s ease-in 0s;
+            ease-in 0s;
         }
     </style>
 </head>
