--- a/Web基础知识学习/02-CSS学习笔记/16-伸缩布局.md
+++ b/Web基础知识学习/02-CSS学习笔记/16-伸缩布局.md
@@ -15,7 +15,7 @@
 
 # 属性详解
 
-+ flex
+## flex
 
 &emsp;&emsp;flex子项目在主轴的缩放比例，不指定flex属性，则不参与伸缩分配。
 
@@ -60,7 +60,7 @@
 </html>
 ```
 
-+ min-width和max-width
+## min-width和max-width
 
 &emsp;&emsp;最小值和最大值，盒子最小宽度不能小于某个值，或者最大宽度不能大于某个值，超出了限制的值就不再缩放。
 
@@ -107,7 +107,7 @@
 </html>
 ```
 
-+ 固定宽度
+## 固定宽度
 
 &emsp;&emsp;给某个盒子设置一个固定的宽度（通过width设置），并且不给定flex的值，这个盒子在布局中的宽度就是固定的：
 
@@ -155,12 +155,12 @@
 </html>
 ```
 
-+ flex-direction
+## flex-direction
 
 &emsp;&emsp;用来调整主轴方向（默认为水平方向），它有两个属性值：
 
-  1. column：垂直排列
-  2. row：水平排列
++ column：垂直排列
++ row：水平排列
 
 ```html
 <!DOCTYPE html>
@@ -199,4 +199,58 @@
 </html>
 ```
 
+## justify-content
+&emsp;&emsp;用来调整主轴的对齐（水平对齐），就是子盒子如何在父盒子里面水平对齐：
 
+值 | 描述 | 白话文
+-|-|-
+flex-start | 默认值，项目位于容器的开头 | 让子元素从父容器的开头开始排序但是盒子顺序不变
+flex-end | 项目位于容器的结尾 | 让子元素从父容器的后面开始排序但是盒子顺序不变
+center | 项目位于容器的中心 | 让子元素在父容器中间显示
+space-between | 项目位于各行之间留有空白的容器内 | 左右的盒子贴近父盒子，中间的平均分布空白间距
+space-around | 项目位于各行之前、之间、之后都留有空白的容器内 | 相当于给每个盒子添加了左右margin外边距
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+       section {
+           width: 1000px;
+           height: 300px;
+           border: 2px solid pink;
+           margin: 100px auto;
+           display: flex;
+           /* justify-content: flex-start; */
+           /* justify-content: flex-end; */
+           /* justify-content: center; */
+           /* justify-content: space-between; */
+           justify-content: space-around;
+       }
+       div {
+           width: 250px;
+           height: 100px;
+       }
+       div:first-child {
+           background-color: pink;
+       }
+       div:nth-child(2) {
+           background-color: purple;
+       }
+       div:nth-child(3) {
+           background-color: skyblue;
+       }
+    </style>
+</head>
+<body>
+<section>
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+</section>
+</body>
+</html>
+```
