--- a/Web基础知识学习/02-CSS学习笔记/15-CSS3新增2D和3D属性.md
+++ b/Web基础知识学习/02-CSS学习笔记/15-CSS3新增2D和3D属性.md
@@ -517,6 +517,46 @@ transform:rotateZ(180deg);
 </html>
 ```
 
+## transform-style
+&emsp;&emsp;transform-style属性是3D空间一个重要属性，指定嵌套元素如何在3D空间中呈现，主要有两个属性值：
+
++ flat：表示所有子元素在2d平面呈现（默认值）
++ preserve-3d：所有子元素在3D空间中呈现
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body {
+            perspective: 1000px;
+        }
+        div {
+            width: 100px;
+            height: 145px;
+            border: 1px solid yellow;
+            margin: 140px auto;
+            transform: rotateY(30deg);
+            transform-style: preserve-3d;
+        }
+        img {
+            transform: rotateY(30deg);
+        }
+    </style>
+</head>
+<body>
+<section>
+    <div>
+        <img src="./erweima.png" width="100" height="145">
+    </div>
+</section>
+</body>
+</html>
+```
+
 # 动画
 &emsp;&emsp;动画是CSS3中具有颠覆性的特征之一，可通过设置多个节点来精确控制一个或一组动画，常用来实现复杂的动画效果。语法格式：
 
