--- a/Web基础知识学习/03-JavaScript基础学习笔记/02-表达式和语句.md
+++ b/Web基础知识学习/03-JavaScript基础学习笔记/02-表达式和语句.md
@@ -225,29 +225,30 @@ for (var j = 1; j < 10; j++) {
 ```
 
 # 调试
+&emsp;&emsp;调试的目的是确定错误的原因和位置并解决错误，错误可以分为：
 
-- 过去调试JavaScript的方式
-  - alert()
-  - console.log()
-- 断点调试
++ 语法错误：浏览器可以直接显示
++ 逻辑错误：需要自己去检查
 
->断点调试是指自己在程序的某一行设置一个断点，调试时，程序运行到这一行就会停住，然后你可以一步一步往下调试，调试过程中可以看各个变量当前的值，出错的话，调试到出错的代码行即显示错误，停下。
+&emsp;&emsp;过去调试JavaScript的方式：
 
-- 调试步骤
++ alert()
++ console.log()
 
-```javascript
-浏览器中按F12-->sources-->找到需要调试的文件-->在程序的某一行设置断点
-```
+## 断点调试
+&emsp;&emsp;断点调试是指自己在程序的某一行设置一个断点，调试时程序运行到这一行就会停住，然后你可以一步一步往下调试。调试过程中可以看各个变量当前的值，出错的话调试到出错的代码行即显示错误并且停下。调试步骤如下：
 
-- 调试中的相关操作
++ 浏览器中按F12
++ sources
++ 找到需要调试的文件
++ 在程序的某一行设置断点
 
-```javascript
-Watch: 监视，通过watch可以监视变量的值的变化，非常的常用。
-F10: 程序单步执行，让程序一行一行的执行，这个时候，观察watch中变量的值的变化。
-F8：跳到下一个断点处，如果后面没有断点了，则程序执行结束。
-```
+![调试](./images/调试.bmp)
 
-tips: ***监视变量，不要监视表达式，因为监视了表达式，那么这个表达式也会执行。***
+&emsp;&emsp;调试中的相关操作
 
-1. 代码调试的能力非常重要，只有学会了代码调试，才能学会自己解决bug的能力。初学者不要觉得调试代码麻烦就不去调试，知识点花点功夫肯定学的会，但是代码调试这个东西，自己不去练，永远都学不会。
-2. 今天学的代码调试非常的简单，只要求同学们记住代码调试的这几个按钮的作用即可，后面还会学到很多的代码调试技巧。
++ Watch（监视）：通过watch可以监视变量的值的变化，非常的常用。
++ F10: 程序单步执行，让程序一行一行的执行，这个时候可以观察watch中变量的值的变化。
++ F8：跳到下一个断点处，如果后面没有断点了，则程序执行结束。
+
+> *__注意：__* 监视变量，不要监视表达式。因为监视了表达式，那么这个表达式也会执行。
